@@ -25,6 +25,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2010-05-02 [B] Fixed js error for search meta album (thread ID 64312) {eenemeenemuu}
 2010-05-02 [B] Fixed 'crop and rotate' issue {eenemeenemuu}
 2010-05-01 [B] Fixed issue when performing an OR search (thread ID 64786) {eenemeenemuu}
 2010-04-28 [O] Updated language file for Castilian Spanish (user contribution) {GauGau}
